# etheria

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  test_jellyfin.js
crates/etheria-cli/: Cargo.toml
crates/etheria-cli/src/: main.rs  spawn.rs  tools.rs
crates/etheria-cli/src/commands/: mod.rs  play.rs  probe.rs  remux.rs  transcode.rs
crates/media-core/: Cargo.toml
crates/media-core/src/: codecs.rs  error.rs  lib.rs  probe.rs  progress.rs  remux.rs  session.rs  transcode.rs  types.rs
src/: App.tsx  data.ts  index.css  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/media/: mod.rs  probe.rs  remux.rs  state.rs  transcode.rs
src/api/: auth.ts  client.ts  library.ts  playback.ts  userdata.ts
src/components/: DetailModal.tsx  DownloadsPanel.tsx  Login.tsx  MainBrowse.tsx  ProfilePanel.tsx  SearchPanel.tsx  ServerMonitor.tsx  ShaderBackground.tsx  VideoPlayer.tsx
src/components/layout/: BottomNav.tsx  Header.tsx  MobileDrawer.tsx
src/hooks/: useUserData.ts
src/pages/: Downloads.tsx  Home.tsx  LocalFiles.tsx  Movies.tsx  Profile.tsx  Search.tsx  ServerMonitorPage.tsx  TVShows.tsx
src/services/: jellyfin.ts  localMedia.ts  metadataFetcher.ts
src/store/: authStore.ts  downloadsStore.ts  libraryStore.ts  playerStore.ts  uiStore.ts
