[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/media-core",
    "crates/etheria-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = ""

[workspace.dependencies]
media-core = { path = "crates/media-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
